app/components/collectionShow/collectionShow.scss
$left_box_width: 691px;
$semi_full_width: 997px;

.collectionShowWrapper {
  display: flex;
}

.collectionShowContentsWrapper {
  margin-top: $navbar_height;
  min-height: calc(100vh - #{$navbar_height} - #{$footer-height});
  width: 100%;
}

.container {
  position: relative;
  width: 100%;
}

.loadingContainer {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-top: 250px;
  align-items: center;
  margin-top: $navbar_height;
  min-height: 738.5px;

  .loadingSpinner {
    div {
      background-color: $gray4;
    }
  }
}

.headSection {
  background-color: $gray0;
  padding: 32px 0;
  display: flex;
  justify-content: center;

  .container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: $regular_width;
  }

  .rightBox {
    margin-right: 24px;
  }

  .leftBox {
    max-width: $small-container-width;
    margin-right: 12px;
    margin-left: 244px;

    .title {
      word-break: break-all;
      font-size: 26px;
      font-weight: bold;
      line-height: 1.38;
      color: $black0;
      margin-bottom: 8px;
    }

    .description {
      font-size: 18px;
      line-height: 1.33;
      color: $gray6;
      margin-bottom: 16px;
      white-space: pre-wrap;
      word-break: break-all;
    }

    .infoWrapper {
      span,
      strong {
        display: inline-block;
        vertical-align: top;
        font-size: 14px;
        line-height: 1.43;
        color: $gray6;
        white-space: pre-wrap;
      }

      strong {
        font-weight: bold;
      }

      .collectionCreatedUser {
        strong {
          text-decoration: underline;
        }
      }
    }
  }
}

.paperListContainer {
  display: flex;
  flex: 1;
  flex-direction: row;
  margin: 0 auto 60px auto;
  max-width: 1200px;

  .leftBox {
    max-width: $small-container-width;
    margin-left: 228px;
    margin-right: 24px;
    width: 100%;
  }
}

.paperListBox {
  margin-top: 24px;
  margin-bottom: 32px;

  .header {
    position: relative;
    margin-bottom: 16px;
  }

  .listTitle {
    display: inline-block;
    vertical-align: top;
    font-size: 20px;
    font-weight: bold;
    line-height: 1.4;
    color: $black0;

    .paperCount {
      margin-left: 8px;
      font-size: 20px;
      font-weight: bold;
      line-height: 1.33;
      color: $main_blue0;
    }
  }
}

.noPaperWrapper {
  margin-top: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;

  .ufoIcon {
    display: inline-block;
    vertical-align: top;
    width: 64px;
    height: 59px;

    svg {
      width: 100%;
      height: 100%;
    }
  }

  .noPaperDescription {
    font-size: 18px;
    color: $gray6;
    margin-top: 24px;
  }
}

.subHeader {
  position: relative;
  margin-top: 28px;
}

.resultPaperCount {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  color: $black1;
  margin-left: 12px;
}
.resultPaperPageCount {
  font-size: 16px;
  line-height: 1.5;
  color: $black1;
}

.sortBoxWrapper {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
}

.searchInputWrapper {
  position: relative;
  max-width: 486px;
  height: 40px;
  border-radius: 4px;
}

.shareAreaWrapper {
  position: absolute;
  bottom: -121px;
  margin-left: -12px;
  height: 110px;
  border-radius: 4px;
  border: 1px solid $gray2;
  background-color: white;
  display: inline-flex;
  padding: 16px;
  justify-content: center;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);

  &:before {
    content: "";
    position: absolute;
    top: 0;
    left: 88%;
    width: 0;
    height: 0;
    border: 11px solid transparent;
    border-bottom-color: $gray2;
    border-top: 0;
    margin-left: -35px;
    margin-top: -11px;
    z-index: 2;
  }

  &:after {
    content: "";
    position: absolute;
    top: 0;
    left: 88%;
    width: 0;
    height: 0;
    border: 10px solid transparent;
    border-bottom-color: white;
    border-top: 0;
    margin-left: -34px;
    margin-top: -10px;
    z-index: 2;
  }

  .shareGuideMessage {
    font-size: 14px;
    color: $gray6;
  }

  .shareBtnsWrapper {
    display: flex;
    position: absolute;
    align-self: flex-end;
  }

  .shareBtn {
    width: 40px;
    height: 40px;
    cursor: pointer;
    border-radius: 4px;
    background-color: $gray8;
    display: inline-flex;
    justify-content: center;
    align-items: center;

    &:hover {
      background-color: #e6eaee;
    }

    &:active {
      filter: brightness(95%);
    }
  }

  .shareBtn + .shareBtn {
    margin-left: 8px;
  }

  .shareIcon {
    width: 24px;
    height: 24px;

    svg {
      color: $main_blue1;
    }
  }

  .facebookShareIcon {
    @extend .shareIcon;
    display: flex;
    justify-content: center;
    align-items: center;

    svg {
      width: 12px;
      height: 18px;
    }
  }

  .twitterShareIcon {
    @extend .facebookShareIcon;

    svg {
      width: 20px;
      height: 16px;
    }
  }
}

.collectionHeaderBtnWrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

// Tablet
@media (max-width: $tablet-width) {
  .headSection {
    .container {
      margin: 0 48px;
      .leftBox {
        margin-left: 0px;
      }
    }
  }

  .paperListContainer {
    .leftBox {
      margin: 0 24px;
    }
  }
}

// Mobile
@media (max-width: $mobile-width) {
  .rightBox {
    display: none;
  }

  .subHeader {
    display: flex;
    flex-direction: column;
  }

  .sortBoxWrapper {
    position: relative;
    display: flex;
    justify-content: flex-end;
    margin-top: 8px;
  }
}

